RESOLVED FIXED23326
Resources are never deleted from application cache disk database
https://bugs.webkit.org/show_bug.cgi?id=23326
Summary Resources are never deleted from application cache disk database
Alexey Proskuryakov
Reported 2009-01-14 11:10:35 PST
After updating an application, old caches are removed, but their resources remain in storage forever.
Attachments
proposed patch (2.92 KB, patch)
2009-01-14 11:16 PST, Alexey Proskuryakov
andersca: review+
Alexey Proskuryakov
Comment 1 2009-01-14 11:16:39 PST
Created attachment 26720 [details] proposed patch
Anders Carlsson
Comment 2 2009-01-14 12:42:41 PST
Comment on attachment 26720 [details] proposed patch r=me
Alexey Proskuryakov
Comment 3 2009-01-14 13:13:21 PST
Committed revision 39905.
Note You need to log in before you can comment on or make changes to this bug.